@@ -1,0 +1,73 @@
+@comment $NetBSD: PLIST,v 1.34 2012/09/04 12:17:12 adam Exp $
+bin/gitk
+libexec/git-core/git-citool
+libexec/git-core/git-gui
+libexec/git-core/git-gui--askpass
+share/git-gui/lib/about.tcl
+share/git-gui/lib/blame.tcl
+share/git-gui/lib/branch.tcl
+share/git-gui/lib/branch_checkout.tcl
+share/git-gui/lib/branch_create.tcl
+share/git-gui/lib/branch_delete.tcl
+share/git-gui/lib/branch_rename.tcl
+share/git-gui/lib/browser.tcl
+share/git-gui/lib/checkout_op.tcl
+share/git-gui/lib/choose_font.tcl
+share/git-gui/lib/choose_repository.tcl
+share/git-gui/lib/choose_rev.tcl
+share/git-gui/lib/class.tcl
+share/git-gui/lib/commit.tcl
+share/git-gui/lib/console.tcl
+share/git-gui/lib/database.tcl
+share/git-gui/lib/date.tcl
+share/git-gui/lib/diff.tcl
+share/git-gui/lib/encoding.tcl
+share/git-gui/lib/error.tcl
+${PLIST.macosx}share/git-gui/lib/Git Gui.app/Contents/Info.plist
+${PLIST.macosx}share/git-gui/lib/Git Gui.app/Contents/MacOS/${WISH_APP}
+${PLIST.macosx}share/git-gui/lib/Git Gui.app/Contents/Resources/Scripts/AppMain.tcl
+${PLIST.macosx}share/git-gui/lib/Git Gui.app/Contents/Resources/git-gui.icns
+share/git-gui/lib/git-gui.ico
+${PLIST.macosx}share/git-gui/lib/git-gui.tcl
+share/git-gui/lib/index.tcl
+share/git-gui/lib/line.tcl
+share/git-gui/lib/logo.tcl
+share/git-gui/lib/merge.tcl
+share/git-gui/lib/mergetool.tcl
+share/git-gui/lib/msgs/de.msg
+share/git-gui/lib/msgs/el.msg
+share/git-gui/lib/msgs/fr.msg
+share/git-gui/lib/msgs/hu.msg
+share/git-gui/lib/msgs/it.msg
+share/git-gui/lib/msgs/ja.msg
+share/git-gui/lib/msgs/nb.msg
+share/git-gui/lib/msgs/pt_br.msg
+share/git-gui/lib/msgs/ru.msg
+share/git-gui/lib/msgs/sv.msg
+share/git-gui/lib/msgs/zh_cn.msg
+share/git-gui/lib/option.tcl
+share/git-gui/lib/remote.tcl
+share/git-gui/lib/remote_add.tcl
+share/git-gui/lib/remote_branch_delete.tcl
+share/git-gui/lib/search.tcl
+share/git-gui/lib/shortcut.tcl
+share/git-gui/lib/spellcheck.tcl
+share/git-gui/lib/sshkey.tcl
+share/git-gui/lib/status_bar.tcl
+share/git-gui/lib/tclIndex
+share/git-gui/lib/themed.tcl
+share/git-gui/lib/tools.tcl
+share/git-gui/lib/tools_dlg.tcl
+share/git-gui/lib/transport.tcl
+share/git-gui/lib/win32.tcl
+share/git-gui/lib/win32_shortcut.js
+share/gitk/lib/msgs/de.msg
+share/gitk/lib/msgs/es.msg
+share/gitk/lib/msgs/fr.msg
+share/gitk/lib/msgs/hu.msg
+share/gitk/lib/msgs/it.msg
+share/gitk/lib/msgs/ja.msg
+share/gitk/lib/msgs/pt_br.msg
+share/gitk/lib/msgs/ru.msg
+share/gitk/lib/msgs/sv.msg
+@pkgdir share/examples/scmgit/templates/branches
