@@ -1,7 +1,8 @@
-# $NetBSD: Makefile.common,v 1.21 2011/10/11 12:01:24 adam Exp $
+# $NetBSD: Makefile.common,v 1.22 2012/01/21 10:51:13 wiz Exp $
 #
 # used by devel/scmgit-base/Makefile
 # used by devel/scmgit-docs/Makefile
+# used by devel/scmgit-gitk/Makefile
 
 .include "../../devel/scmgit/Makefile.version"
 
@@ -20,12 +21,11 @@ PKG_DESTDIR_SUPPORT=	user-destdir
 PATCHDIR=	${.CURDIR}/../../devel/scmgit-base/patches
 DISTINFO_FILE=	${.CURDIR}/../../devel/scmgit-base/distinfo
 
-USE_TOOLS+=		gmake tar perl sh
+USE_TOOLS+=		gmake tar sh
 
 PKG_SYSCONFSUBDIR=	git
 
 GNU_CONFIGURE=		yes
-CONFIGURE_ARGS+=	--with-perl=${PERL5:Q}
 CONFIGURE_ARGS+=	--with-shell=${SH:Q}
 CONFIGURE_ARGS+=	TAR=${TAR:Q}
 CONFIGURE_ARGS+=	--mandir=${${PREFIX}/${PKGMANDIR}:L:Q}
