@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.55 2012/06/12 15:46:00 wiz Exp $
+# $NetBSD: Makefile,v 1.56 2012/07/20 16:28:49 wiz Exp $
 
-DISTNAME=	nsd-3.2.12
+DISTNAME=	nsd-3.2.13
 CATEGORIES=	net
 MASTER_SITES=	http://www.nlnetlabs.nl/downloads/nsd/
 
